cluster/oci/apps/database/lazy-tools.yaml
# phpMyAdmin⁠
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: database-oci
  labels:
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/instance: phpmyadmin
      app.kubernetes.io/name: phpmyadmin
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: phpmyadmin
        app.kubernetes.io/name: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: arm64v8/phpmyadmin:5.2.1
          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
            timeoutSeconds: 2
            tcpSocket:
              port: 80
          startupProbe:
            failureThreshold: 10
            timeoutSeconds: 2
            tcpSocket:
              port: 80
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  namespace: database-oci
spec:
  selector:
    app.kubernetes.io/instance: phpmyadmin
    app.kubernetes.io/name: phpmyadmin
  ports:
    - name: phpmyadmin
      protocol: TCP
      port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phpmyadmin
  namespace: database-oci
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "128m"
spec:
  ingressClassName: internal-nginx
  tls:
    - hosts:
        - "*.oci.hyde.services"
      secretName: wildcard.hyde.services
  rules:
    - host: phpmyadmin.oci.hyde.services
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: phpmyadmin
                port:
                  number: 80
